# 23-Software-Design-Patterns-Every-Programmer-Should-Know

./: .gitignore  README.md
chp01_Singleton/C++/: ConfigurationSettings_basic.cpp  ConfigurationSettings_thread_safe.cpp  Testing_ConfigurationSettings_dependency_injection.cpp  Testing_ConfigurationSettings_reset.cpp  Testing_ConfigurationSettings_thread_safety.cpp
chp01_Singleton/Kotlin/: DatabaseConnection_basic.kt  DatabaseConnection_basic_and_thread_safe.kt  Singleton_Code_Review.kt  Singleton_Code_Review_Improvement.kt  Testing_DatabaseConnection_dependency_injection.kt  Testing_DatabaseConnection_reset.kt  Testing_DatabaseConnection_thread_safety.kt  build.gradle
chp01_Singleton/Python/: ConfigurationSettings_basic.py  ConfigurationSettings_thread_safe.py  Logging_example.py  Testing_ConfigurationSettings_dependency_injection.py  Testing_ConfigurationSettings_reset.py  Testing_ConfigurationSettings_thread_safety.py
chp01_Singleton/Swift/: DatabaseConnection_basic.swift  DatabaseConnection_thread_safe.swift  Testing_DatabaseConnection_dependency_injection.swift  Testing_DatabaseConnection_reset.swift  Testing_DatabaseConnection_thread_safety.swift
chp01_Singleton/TypeScript/: Logger_basic.js  Logger_basic.ts  Logger_thread_safe.js  Logger_thread_safe.ts  Testing_Logger_dependency_injection.js  Testing_Logger_dependency_injection.ts  Testing_Logger_reset.js  Testing_Logger_reset.ts  Testing_Logger_thread_safety.js  package-lock.json  (+2 more)
chp02_FactoryMethod/C++/testing/: CMakeLists.txt  main.cpp  payment_gateway.cpp  payment_gateway.h  payment_gateway_test.cpp
(+55 files in other folders)
